UI refresh: install/export/import + v1.0.1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+<!-- Cloudflare Web Analytics -->
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js"
+  data-cf-beacon='{"token": "YOUR_TOKEN"}'></script>
+<!-- End Cloudflare Web Analytics -->
+
     <meta charset="UTF-8" />
     <meta
       name="viewport"
