--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
- <link rel="manifest" href="/manifest.webmanifest" />
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <title>Contact Manager</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Manager PWA</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
